# whisper-cpp

./: .editorconfig  .gitignore  CMakePresets.json  README.md  README_sycl.md  cspell.config.yaml  pyproject.toml  taskfile.yaml
.cspell/: custom-dictionary.txt
.github/workflows/: build.yml
bindings/java/: .gitignore
bindings/javascript/: package.json
examples/: CMakeLists.txt
examples/command/: CMakeLists.txt
examples/python/: whisper_processor.py
examples/stream/: CMakeLists.txt
examples/talk-llama/: CMakeLists.txt
examples/whisper.android.java/gradle/wrapper/: gradle-wrapper.properties
examples/whisper.android/gradle/wrapper/: gradle-wrapper.properties
models/: download-ggml-model.cmd
scripts/: bench.py
