[project]
name = "whisper-cpp"
version = "1.6.2"
description = "Add your description here"
authors = [{ name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }]
dependencies = [
    "torch",
    "coremltools",
    "openai-whisper",
    "ane-transformers",
    "elevenlabs>=1.3.1",
]
readme = "README.md"
requires-python = ">=3.11, <4"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/models/convert-h5-to-coreml.py",
    "src/models/convert-h5-to-ggml.py",
    "src/models/convert-pt-to-ggml.py",
    "src/models/convert-whisper-to-coreml.py",
    "src/models/convert-whisper-to-openvino.py",
    "src/models/ggml_to_pt.py",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".build/",
    ".git/",
    ".mypy_cache/",
    ".task/",
    ".venv/",
    "build/",
    "dist/",
    "external/vcpkg/",
    "vcpkg_installed/",
]
ignore-vcs = true

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.4.10",
    "mypy>=1.10.0",
    "pylint>=3.2.3",
    "isort>=5.13.2",
    "uv>=0.2.13",
    "pyright>=1.1.368",
    "cmake>=3.31.2",
    "cython>=3.0.11",
    "ninja>=1.11.1.3",
]

[tool.uv.pip]
universal = true

[tool.uv.sources]
torch = [
    { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
torchaudio = [
    { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
torchvision = [
    { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
triton = [
    { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'win32'" },
]
pyyaml = { git = "https://github.com/yaml/pyyaml.git" }

[[tool.uv.index]]
url = "https://pypi.ngc.nvidia.com/"

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/rocm6.0"
explicit = true
prerelease = "allow"

[tool.ruff]
line-length = 120
exclude = [
    ".build/",
    ".git/",
    ".mypy_cache/",
    ".task/",
    ".venv/",
    "build/",
    "dist/",
    "external/vcpkg/",
    "vcpkg_installed/",
]
